# telegram-cjk-search-bot

./: .cz.toml  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  release-please-config.json  renovate.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/release-please/: release-please-config.json
.github/workflows/: build.yml  ci.yml  release-please.yml  test.yml
nix/: bin.nix  docker-image.nix
src/: db.rs  handlers.rs  lib.rs  ogp.rs  types.rs
src/handlers/: command_handler.rs  inline_handler.rs  message_handler.rs  web_page_handler.rs
