[package]
name = "telegram-cjk-search-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.17", features = ["derive"] }
html-escape = "0.2"
futures = "0.3"

[features]
private_tests = []
