[package]
name = "telegram-cjk-search-bot"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meilisearch-sdk = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5.2", features = ["derive", "string"] }
html-escape = "0.2"
futures = "0.3"
cached = { version = "0.49.2", features = ["async"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
tl = "0.7.8"
utf16string = "0.2.0"
crc32fast = "1.4"

[features]
private_tests = []
